    Closes: #613364
  * mh_resolve_dependencies: Always launch Maven in offline mode
    with --offline option (as already done on mh_make). Closes: #629356
  * SysInstallDocMojo, SysInstallMojo: Drop initProperties method and only rely
    on Maven mojo attributes injection of "debianPackage" and "destPackage".
    Closes: #628693.

 -- Damien Raude-Morvan <drazzib@debian.org>  Wed, 08 Jun 2011 23:22:11 +0200

maven-debian-helper (1.4.2) unstable; urgency=low

  * mh_resolve_dependencies: Handle --verbose option has described in
    documentation (it was previously just ignored).
  * DependenciesSolver: In case we didn't found anything for "jar" type,
    just check for a "bundle" type inside repository

 -- Damien Raude-Morvan <drazzib@debian.org>  Sat, 14 May 2011 22:59:17 +0200

maven-debian-helper (1.4.1) unstable; urgency=low

  * Upload to unstable.

 -- Torsten Werner <twerner@debian.org>  Wed, 09 Feb 2011 21:42:36 +0100

maven-debian-helper (1.4) experimental; urgency=low

  * d/control: Add Recommends on devscripts (which provides licensecheck)
  * mh_make: 
     - Improve generated copyright
     - Fix generated rules for a build using ant
     - When ignoring dependencies, don't fail the build
     - When ant is used as the build tool, generate the build.xml file
       required for multi projects.
     - use licensecheck as an additional source of information for licenses

 -- Ludovic Claude <ludovic.claude@laposte.net>  Fri, 12 Nov 2010 12:26:37 +0100

maven-debian-helper (1.3) experimental; urgency=low

  * ${maven:Depends} and similar substitution vars: add
    version constraints when possible
  * Use dpkg to resolve the dependent packages in ${maven:DocDepends}
    (Closes: #588114)
  * Use dpkg to search for the documentation package (Closes: #588114)
  * mh_make: suggest installing missing dependencies which are not ignored
    during the build
  * add property debian.hasPackageVersion property, if true in the